Fix typo and experiment with latex editing formatting
It's a little awkward to write regular text into VSCode

--- a/prospectus/prospectus.tex
+++ b/prospectus/prospectus.tex
@@ -36,7 +36,7 @@ With the advent of small consumer electronics such as Raspberry Pis and their im
 
 I will begin my research by investigating the minimum cost barrier to create a computer using quality parts that can be used like a regular consumer product that has enough power to connect with a desktop computer at speeds sufficient for intense computing.
 % Do I want to mention video games as a benchmark, as that would prove both processing speed as well as responsiveness?
-Once parts have been selected and order, I will begin developing the hardware enclosure, wiring plans, and the software required to make the computer functional.
+Once parts have been selected and ordered, I will begin developing the hardware enclosure, wiring plans, and the software required to make the computer functional.
 Throughout development, I will be benchmarking my product against existing technologies that support remote usage of computers, such as remote desktops.
 I plan to investigate the specific technical specifications of the remote connection between my device and the host computer such as the latency, responsiveness, and image quality.
 Due to the lack of existing all-in-one device for this purpose, I will research the advantages such a device has over comparable alternatives.
