--- a/prospectus/prospectus.tex
+++ b/prospectus/prospectus.tex
@@ -21,24 +21,27 @@
 
 \section*{Topic Overview}
 
-Personal computers have greatly evolved and specialized over the past few decades to the point where a computer can be tailored to specific needs and usages ranging from the portability of a laptop to the raw power of a desktop.
-Though it hasn't been until very recently that these two classes of computers have begun to share traits with each other.
+Personal computers have greatly evolved and specialized over the past few decades to the point where the word "computer" now refers to a whole family of devices that can be tailored to any particular use case.
+A computer can be built to specifically fill a need or role ranging from the portability of a laptop to the raw power of a desktop.
+For the longest time these roles have been completely seperate from one another, though in the past couple of years these two classes of computers have begun to share traits with each other.
 While a desktop computer has been the standard for intensive computing and work since the beginning of computers, technology has progressed to the point where a laptop can provide comparable power in a much smaller footprint.
 With the recent shift in attention towards remote work and mobile computing, the prospect of taking a workstation wherever needed is incredibly promising.
 Though even the emerging laptops today struggle to compete with desktops in terms of cost, maintenance, and future upgrades.
-The cost barrier to entry for laptops is considerably higher compared to desktop computers, and most laptops are manufactured in a way that makes upgrading parts of the machine difficult or impossible, forcing a complete purchase in the event of failure or a component needs to be upgraded.
+The cost barrier to entry for powerful laptops is considerably higher compared to desktop computers, and most laptops are manufactured in a way that makes upgrading parts of the machine difficult or impossible, forcing a complete purchase in the event of failure or a component needs to be upgraded.
 
-However, in the case where someone already owns a desktop computer and needs to be mobile, instead of needing to purchase a second device at full price, it may be possible to develop a low-cost computer that has just enough power to connect to the existing desktop and run all computing there, using the mobile device only as a user interface.
+However, in the case where someone already owns a desktop computer and needs to be mobile, instead of needing to purchase a second device at full price, it may be possible to develop a low-cost computer that has just enough power to connect to the existing desktop and run all processing there, using the mobile device only as a user interface.
 While the idea of a thin-client is not new, it's current usage in the real world has mostly been limited to computing clusters and server terminals due to their dependence on stable internet connections.
 With the advent of small consumer electronics such as Raspberry Pis and their improvements in networking capabilities, the idea of a remote desktop has become a real possibility.
 
 \section*{Research Plan}
 
 I will begin my research by investigating the minimum cost barrier to create a computer using quality parts that can be used like a regular consumer product that has enough power to connect with a desktop computer at speeds sufficient for intense computing.
-% Do I want to mention video games as a benchmark, as that would prove both processing speed as well as responsiveness?
+Once I can build a proof-of-concept using consumer parts, I will begin researching and developing a custom Printed Circuit Board (PCB) that will produce the same hardware output as a single board computer at a small footprint.
+I believe creating a custom PCB will have benefits over a "DIY" solution as it will help prove the final product as something that could be used as a professional day-to-day replacement for a conventional powerful laptop.
 Once parts have been selected and ordered, I will begin developing the hardware enclosure, wiring plans, and the software required to make the computer functional.
 Throughout development, I will be benchmarking my product against existing technologies that support remote usage of computers, such as remote desktops.
 I plan to investigate the specific technical specifications of the remote connection between my device and the host computer such as the latency, responsiveness, and image quality.
+These statistics can be benchmarked by attempting to run intensive programs remotely, such as training an AI model, compiling code, running CAD software, rendering images/video, or developing video game software.
 Due to the lack of existing all-in-one device for this purpose, I will research the advantages such a device has over comparable alternatives.
 Once development has concluded, I will use the data collected to synthesize a comprehensive overview of the produced device and analyze its benefits over purchasing a high-powered laptop or using current alternatives.
 
@@ -53,8 +56,8 @@ Other meetings may be scheduled should new information or urgent questions arise
 \begin{tabular}{r|p{0.8\linewidth}}
 	Date       & Task                                                                                 \\
 	\hline
-	           & Begin research into hardware and software to be used in the project                  \\
-	           & Order parts and begin researching and designing enclosure for parts                  \\
+	June       & Begin research into hardware and software to be used in the project                  \\
+	July       & Order parts and begin researching and designing enclosure for parts                  \\
 	August 11  & Begin regular meetings with director, review schedule                                \\
 	August     & Begin creating hardware and software for project                                     \\
 	January 10 & Start working on thesis paper, continue research and development on physical project \\
