Tweak prospectus schedule

--- a/prospectus/prospectus.tex
+++ b/prospectus/prospectus.tex
@@ -21,7 +21,7 @@
 
 \section*{Topic Overview}
 
-Personal computers have greatly evolved and specialized over the past few decades to the point where the word "computer" now refers to a whole family of devices that can be tailored to any particular use case.
+Personal computers have greatly evolved and specialized over the past few decades to the point where the word ``computer" now refers to a whole family of devices that can be tailored to any particular use case.
 A computer can be built to specifically fill a need or role ranging from the portability of a laptop to the raw power of a desktop.
 For the longest time these roles have been completely seperate from one another, though in the past couple of years these two classes of computers have begun to share traits with each other.
 While a desktop computer has been the standard for intensive computing and work since the beginning of computers, technology has progressed to the point where a laptop can provide comparable power in a much smaller footprint.
@@ -60,10 +60,11 @@ Other meetings may be scheduled should new information or urgent questions arise
 	July       & Order parts and begin researching and designing enclosure for parts                  \\
 	August 11  & Begin regular meetings with director, review schedule                                \\
 	August     & Begin creating hardware and software for project                                     \\
+	December   & Create final prototype for the project                                               \\
 	January 10 & Start working on thesis paper, continue research and development on physical project \\
-	March 6    & Complete rough draft of thesis paper                                                 \\
-	April      & Thesis Defense                                                                       \\
-	           & Submit Thesis                                                                        \\
+	Feburary   & Complete rough draft of thesis paper                                                 \\
+	March      & Thesis Defense                                                                       \\
+	April 15   & Submit Thesis                                                                        \\
 \end{tabular}
 
 \end{document}
