--- a/paper/MastersDoctoralThesis.cls
+++ b/paper/MastersDoctoralThesis.cls
@@ -363,7 +363,7 @@ KOMA-script documentation for details.}]{fancyhdr}
 			\bigskip
 			{\huge\textit{\abstractname} \par}
 			\bigskip
-			{\normalsize \facname \par}% Faculty name
+			% {\normalsize \facname \par}% Faculty name
 			{\normalsize \deptname \par}% Department name
 			\bigskip
 			{\normalsize \degreename\par}% Degree name
@@ -389,7 +389,7 @@ KOMA-script documentation for details.}]{fancyhdr}
 		\bigskip
 		{\huge\textit{\abstractname} \par}
 		\bigskip
-		{\normalsize \facname \par}% Faculty name
+		% {\normalsize \facname \par}% Faculty name
 		{\normalsize \deptname \par}% Department name
 		\bigskip
 		{\normalsize \degreename\par}% Degree name
