--- a/paper/main.tex
+++ b/paper/main.tex
@@ -62,19 +62,19 @@ headsepline, % Uncomment to get a line under the header
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Thesis Title} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Dr. James \textsc{Smith}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
+\thesistitle{Building a Mobile Device that Uses the Power of a Desktop Computer} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\supervisor{Dr. Robert \textsc{Heinrichs}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
-\degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{John \textsc{Smith}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
+\degree{Software Engineering} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
+\author{Dylan \textsc{Lathrum}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 
-\subject{Biological Sciences} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
+\subject{Software Engineering} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\university{\href{http://www.university.com}{University Name}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
-\department{\href{http://department.university.com}{Department or School Name}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
-\group{\href{http://researchgroup.university.com}{Research Group Name}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
-\faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
+\university{\href{https://www.asu.edu/}{Arizona State University}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
+\department{\href{https://barretthonors.asu.edu/}{Barrett, The Honors College}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
+% \group{} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
+% \faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
 \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
@@ -97,7 +97,7 @@ headsepline, % Uncomment to get a line under the header
 
 		\vspace*{.06\textheight}
 		{\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
-		\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
+		\textsc{\Large Undergraduate Thesis}\\[0.5cm] % Thesis type
 
 		\HRule \\[0.4cm] % Horizontal line
 		{\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
@@ -106,21 +106,21 @@ headsepline, % Uncomment to get a line under the header
 		\begin{minipage}[t]{0.4\textwidth}
 			\begin{flushleft} \large
 				\emph{Author:}\\
-				\href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
+				\href{https://www.linkedin.com/in/dylanlathrum/}{\authorname} % Author name - remove the \href bracket to remove the link
 			\end{flushleft}
 		\end{minipage}
 		\begin{minipage}[t]{0.4\textwidth}
 			\begin{flushright} \large
 				\emph{Supervisor:} \\
-				\href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+				\href{https://isearch.asu.edu/profile/3180015}{\supname} % Supervisor name - remove the \href bracket to remove the link  
 			\end{flushright}
 		\end{minipage}\\[3cm]
 
 		\vfill
 
 		\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-		\textit{in the}\\[0.4cm]
-		\groupname\\\deptname\\[2cm] % Research group name and department name
+		\textit{for}\\[0.4cm]
+		\deptname\\[2cm] % Research group name and department name
 
 		\vfill
 
@@ -163,9 +163,9 @@ headsepline, % Uncomment to get a line under the header
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
+\noindent\enquote{\itshape Premature optimization is the root of all evil.}\bigbreak
 
-\hfill Dave Barry
+\hfill Sir Tony Hoare
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
