First draft of outline
This also creates the file structure for each of the chapters, which is nice

--- a/paper/MastersDoctoralThesis.cls
+++ b/paper/MastersDoctoralThesis.cls
@@ -275,7 +275,7 @@
 %	HEADERS AND FOOTERS
 %----------------------------------------------------------------------------------------
 
-\RequirePackage[markcase=used]{scrlayer-scrpage}
+\RequirePackage[markcase=used, draft=false]{scrlayer-scrpage}
 \providepairofpagestyles{thesisSimple}{%
 	\clearpairofpagestyles%
 	\automark[chapter]{chapter}
