--- a/paper/main.tex
+++ b/paper/main.tex
@@ -22,7 +22,7 @@
 %oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
 english, % ngerman for German
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
-% draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
+draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
 % final, % Uncomment to enable final mode (hide todos)
 %nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 %liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
@@ -41,7 +41,7 @@ headsepline, % Uncomment to get a line under the header
 
 \usepackage[backend=bibtex,style=authoryear,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
 
-\addbibresource{example.bib} % The filename of the bibliography
+\addbibresource{bibliography.bib} % The filename of the bibliography
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
@@ -206,7 +206,10 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
+	\textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{CRD} & \textbf{C}hrome \textbf{R}emote \textbf{D}esktop\\
+	\textbf{GPU} & \textbf{G}raphics \textbf{P}rocessing \textbf{U}nit\\
+	\textbf{PC} & \textbf{P}ersonal \textbf{C}computer\\
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
@@ -260,6 +263,7 @@ headsepline, % Uncomment to get a line under the header
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
+% \include{Chapters/Example}
 \include{Chapters/Introduction}
 \include{Chapters/Background}
 \include{Chapters/StateOfTheArt}
