--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -24,6 +24,7 @@
   doi     = {10.1109/MC.2003.1160055},
   url     = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=1160055}
 }
+
 @article{Meyer20145RS,
   title={5 Reasons Schools Still Need Desktop Computers: Despite the Growth of Mobile Learning, Desktops Still Play Important Roles in the 21st Century Classroom},
   author={L. Meyer},
@@ -32,3 +33,5 @@
   volume={41},
   pages={20}
 }
+
+@misc{idc_2021, title={Solid notebook demand in consumer and education marks 2021 Q1 as the fourth consecutive quarter of double-digit growth in EMEA PC market, says IDC}, url={https://www.idc.com/getdoc.jsp?containerId=prEUR147632021}, journal={IDC}, year={2021}, month={Apr}} 
