--- a/paper/main.tex
+++ b/paper/main.tex
@@ -47,6 +47,7 @@ headsepline, % Uncomment to get a line under the header
 
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny,obeyFinal]{todonotes} % Todo notes in margin
 
+\newcommand{\todoadvisor}[1]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue]{#1}}
 \newcommand{\todosection}{\todo[linecolor=olive,backgroundcolor=olive!25,bordercolor=olive,inline]{TODO}}
 
 %----------------------------------------------------------------------------------------
@@ -102,7 +103,7 @@ headsepline, % Uncomment to get a line under the header
 
 		\vspace*{.06\textheight}
 		{\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
-		\textsc{\Large Undergraduate Thesis}\\[0.5cm] % Thesis type
+		\textsc{\Large Honors Thesis}\\[0.5cm] % Thesis type
 
 		\HRule \\[0.4cm] % Horizontal line
 		{\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
@@ -205,11 +206,11 @@ headsepline, % Uncomment to get a line under the header
 %----------------------------------------------------------------------------------------
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-
+	\addchaptertocentry{\abbrevname} % Add the Abbreviations to the table of contents
 	\textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{CRD} & \textbf{C}hrome \textbf{R}emote \textbf{D}esktop\\
 	\textbf{GPU} & \textbf{G}raphics \textbf{P}rocessing \textbf{U}nit\\
-	\textbf{PC} & \textbf{P}ersonal \textbf{C}computer\\
+	\textbf{PC} & \textbf{P}ersonal \textbf{C}omputer\\
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
