Fix comments for Background chapter

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -6,11 +6,11 @@
 } 
 
 @inproceedings{Burbeck2007ComplexityAT,
-  title  = {Complexity and the Evolution of Computing : Biological Principles for Managing Evolving Systems},
+  title     = {Complexity and the Evolution of Computing : Biological Principles for Managing Evolving Systems},
   booktitle = {Complexity and the Evolution of Computing : Biological Principles for Managing Evolving Systems},
-  author = {Steve Burbeck},
-  year   = {2007},
-  url   = {https://evolutionofcomputing.org/Complexity%20and%20Evolution%20of%20Computing%20v2.pdf}
+  author    = {Steve Burbeck},
+  year      = {2007},
+  url       = {https://evolutionofcomputing.org/Complexity%20and%20Evolution%20of%20Computing%20v2.pdf}
 }
 
 @article{AutonomicComputing,
@@ -26,12 +26,61 @@
 }
 
 @article{Meyer20145RS,
-  title={5 Reasons Schools Still Need Desktop Computers: Despite the Growth of Mobile Learning, Desktops Still Play Important Roles in the 21st Century Classroom},
-  author={L. Meyer},
-  journal={T.H.E. Journal Technological Horizons in Education},
-  year={2014},
-  volume={41},
-  pages={20}
+  title   = {5 Reasons Schools Still Need Desktop Computers: Despite the Growth of Mobile Learning, Desktops Still Play Important Roles in the 21st Century Classroom},
+  author  = {L. Meyer},
+  journal = {T.H.E. Journal Technological Horizons in Education},
+  year    = {2014},
+  volume  = {41},
+  pages   = {20}
 }
 
-@misc{idc_2021, title={Solid notebook demand in consumer and education marks 2021 Q1 as the fourth consecutive quarter of double-digit growth in EMEA PC market, says IDC}, url={https://www.idc.com/getdoc.jsp?containerId=prEUR147632021}, journal={IDC}, year={2021}, month={Apr}} 
+@misc{idc_2021,
+  title   = {Solid notebook demand in consumer and education marks 2021 Q1 as the fourth consecutive quarter of double-digit growth in EMEA PC market, says IDC},
+  url     = {https://www.idc.com/getdoc.jsp?containerId=prEUR147632021},
+  journal = {IDC},
+  year    = {2021},
+  month   = {Apr}
+} 
+
+@book{ImageThinClient,
+  title   = {Clientron U700},
+  url     = {https://commons.wikimedia.org/wiki/File:ClientronU700.jpg},
+  journal = {Wikimedia},
+  author  = {Djjajah},
+  year    = {2008},
+  month   = {Nov}
+} 
+
+@article{levanon_2020,
+  title     = {Remote work: The biggest legacy of covid-19},
+  url       = {https://www.forbes.com/sites/gadlevanon/2020/11/23/remote-work-the-biggest-legacy-of-covid-19/?sh=699b0767f590},
+  journal   = {Forbes},
+  publisher = {Forbes Magazine},
+  author    = {Levanon, Gad},
+  year      = {2020},
+  month     = {Nov}
+} 
+@misc{ASU_covid_19,
+  title     = {Covid-19 announcements archive},
+  url       = {https://eoss.asu.edu/health/announcements/coronavirus/announcements-archive},
+  journal   = {COVID-19 Announcements Archive | Educational Outreach and Student Services},
+  publisher = {ASU}
+} 
+
+@misc{chipshortage_jpmorgan,
+  title   = {How long will the chip shortage last?: J.P. Morgan Research},
+  url     = {https://www.jpmorgan.com/insights/research/supply-chain-chip-shortage},
+  journal = {J.P. Morgan},
+  year    = {2021},
+  month   = {Dec}
+} 
+
+@misc{tamarov_2021,
+  title     = {Chip shortage driving up PC prices, Wait Times},
+  url       = {https://www.techtarget.com/searchmobilecomputing/news/252499402/Chip-shortage-driving-up-PC-prices-wait-times},
+  journal   = {SearchMobileComputing},
+  publisher = {TechTarget},
+  author    = {Tamarov, Maxim},
+  year      = {2021},
+  month     = {Apr}
+} 
