Start State of the Art chapter

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -3,7 +3,7 @@
   url     = {https://www.raspberrypi.org/forums/viewtopic.php?t=293632},
   journal = {Teach, Learn, and Make with Raspberry Pi},
   year    = {2020}
-} 
+}
 
 @inproceedings{Burbeck2007ComplexityAT,
   title     = {Complexity and the Evolution of Computing : Biological Principles for Managing Evolving Systems},
@@ -40,7 +40,7 @@
   journal = {IDC},
   year    = {2021},
   month   = {Apr}
-} 
+}
 
 @book{ImageThinClient,
   title   = {Clientron U700},
@@ -49,7 +49,7 @@
   author  = {Djjajah},
   year    = {2008},
   month   = {Nov}
-} 
+}
 
 @article{levanon_2020,
   title     = {Remote work: The biggest legacy of covid-19},
@@ -59,13 +59,14 @@
   author    = {Levanon, Gad},
   year      = {2020},
   month     = {Nov}
-} 
+}
+
 @misc{ASU_covid_19,
   title     = {Covid-19 announcements archive},
   url       = {https://eoss.asu.edu/health/announcements/coronavirus/announcements-archive},
   journal   = {COVID-19 Announcements Archive | Educational Outreach and Student Services},
   publisher = {ASU}
-} 
+}
 
 @misc{chipshortage_jpmorgan,
   title   = {How long will the chip shortage last?: J.P. Morgan Research},
@@ -73,7 +74,7 @@
   journal = {J.P. Morgan},
   year    = {2021},
   month   = {Dec}
-} 
+}
 
 @misc{tamarov_2021,
   title     = {Chip shortage driving up PC prices, Wait Times},
@@ -83,4 +84,58 @@
   author    = {Tamarov, Maxim},
   year      = {2021},
   month     = {Apr}
+}
+
+@misc{ImageNvidiaShield,
+  title   = {Nvidia Shield: Shipped, praised, critiqued, dissected},
+  url     = {https://linuxgizmos.com/nvidia-shield-reviews-and-teardown/},
+  journal = {LinuxGizmos.com},
+  author  = {Brown, Eric},
+  year    = {2013},
+  month   = {Aug}
 } 
+
+@misc{brown_2013,
+  title   = {Nvidia Shield game console runs Android on tegra 4},
+  url     = {https://linuxgizmos.com/nvidia-shield-android-game-console-shipping-soon/},
+  journal = {LinuxGizmos.com},
+  author  = {Brown, Eric},
+  year    = {2013},
+  month   = {May}
+}
+
+@misc{daniel_2017,
+  title   = {Shield TV brings the smart home to a TV near you: Nvidia blog},
+  url     = {https://blogs.nvidia.com/blog/2017/01/04/shield-ai-home/},
+  journal = {The Official NVIDIA Blog},
+  author  = {Daniel, Chris},
+  year    = {2017},
+  month   = {Jan}
+}
+
+@misc{moonlight,
+  title   = {Moonlight},
+  url     = {https://moonlight-stream.org/},
+  journal = {Moonlight Game Streaming: Play Your PC Games Remotely}
+}
+
+@misc{rdpDocs,
+  title   = {Understanding remote desktop protocol (RDP) - windows server},
+  url     = {https://docs.microsoft.com/en-us/troubleshoot/windows-server/remote/understanding-remote-desktop-protocol},
+  journal = {Understanding Remote Desktop Protocol (RDP) - Windows Server | Microsoft Docs}
+}
+
+@misc{burgin_2013,
+  title   = {RelativeMouseMode},
+  url     = {https://social.msdn.microsoft.com/Forums/en-US/ae516842-1e3d-4943-8144-1b225e74684e/relativemousemode},
+  journal = {Microsoft Developer Network},
+  author  = {Burgin, Bryan S},
+  year    = {2013},
+  month   = {Mar}
+}
+
+@misc{vncFlavors,
+  title   = {The VNC family of Remote Control Application},
+  url     = {http://ipinfo.info/html/vnc_remote_control.php},
+  journal = {VNC Remote Control Software - VNC flavors}
+}
