Draft State of the Art Chapter
I need to pick up the pace

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -139,3 +139,47 @@
   url     = {http://ipinfo.info/html/vnc_remote_control.php},
   journal = {VNC Remote Control Software - VNC flavors}
 }
+
+@misc{chromotingBuildInstructions,
+  title   = {Chromoting Build Instructions},
+  url     = {https://chromium.googlesource.com/chromium/src/+/refs/tags/82.0.4058.2/docs/old_chromoting_build_instructions.md},
+  journal = {Chromium},
+  year    = {2020},
+  month   = {Feb}
+}
+
+@misc{miniorange_chromoting,
+  title   = {Google Chromoting - remote desktop management},
+  url     = {https://www.miniorange.com/google-chromoting-remote-desktop-management},
+  journal = {miniOrange Secure It Right : Identity and Access Management Solution}
+}
+
+@misc{upson_sengupta_2012,
+  title     = {Next step in the chrome OS journey},
+  url       = {https://blog.google/products/chromebooks/next-step-in-chrome-os-journey/},
+  journal   = {Google Blog},
+  publisher = {Google},
+  author    = {Upson, Linus and Sengupta, Caesar},
+  year      = {2012},
+  month     = {May}
+}
+
+@misc{rfc4251,
+  title     = {RFC 4251 - the secure shell (SSH) protocol architecture},
+  url       = {https://datatracker.ietf.org/doc/html/rfc4251},
+  journal   = {IETF Datatracker},
+  publisher = {IETF},
+  author    = {Ylonen, Tatu},
+  editor    = {Lonvick, ChrisEditor},
+  year      = {2006},
+  month     = {Jan}
+}
+
+@misc{vscode_ssh,
+  title     = {Developing on remote machines using SSH and Visual Studio Code},
+  url       = {https://code.visualstudio.com/docs/remote/ssh},
+  journal   = {Visual Studio Code},
+  publisher = {Microsoft},
+  year      = {2021},
+  month     = {Nov}
+}
