Start working on the Hardware chapter

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -209,6 +209,7 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 	\addchaptertocentry{\abbrevname} % Add the Abbreviations to the table of contents
+	\textbf{CM4} & Raspberry Pi \textbf{C}ompute \textbf{M}odule \textbf{4}\\
 	\textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{CRD} & \textbf{C}hrome \textbf{R}emote \textbf{D}esktop\\
 	\textbf{GPU} & \textbf{G}raphics \textbf{P}rocessing \textbf{U}nit\\
@@ -216,6 +217,7 @@ headsepline, % Uncomment to get a line under the header
 	\textbf{PC} & \textbf{P}ersonal \textbf{C}omputer\\
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
+	\textbf{SBC} & \textbf{S}ingle \textbf{B}aard \textbf{C}omputer\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
 	\textbf{VNC} & \textbf{V}irtual \textbf{N}etwork \textbf{C}omputing\\
 
