--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -183,3 +183,10 @@
   year      = {2021},
   month     = {Nov}
 }
+
+@misc{rpi_cm4,
+  title   = {Compute Module 4},
+  url     = {https://www.raspberrypi.com/products/compute-module-4/},
+  journal = {Raspberry Pi},
+  author  = {Raspberry Pi}
+}
