Draft prototyping sections
The next section is going to be meaty, it might need to be broken up somehow

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -190,3 +190,17 @@
   journal = {Raspberry Pi},
   author  = {Raspberry Pi}
 }
+
+@misc{rpi_cm4_io,
+  title   = {Compute Module 4 IO Board},
+  url     = {https://www.raspberrypi.com/products/compute-module-4-io-board/},
+  journal = {Raspberry Pi},
+  author  = {Raspberry Pi}
+}
+
+@misc{smt_adapter,
+  title     = {QFN-100 to DIP-104 SMT Adapter},
+  url       = {http://www.proto-advantage.com/store/product_info.php?products_id=3100128},
+  journal   = {Proto Advantage},
+  publisher = {Proto Advantage}
+}
