--- a/paper/main.tex
+++ b/paper/main.tex
@@ -218,6 +218,7 @@ headsepline, % Uncomment to get a line under the header
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
 	\textbf{SBC} & \textbf{S}ingle \textbf{B}aard \textbf{C}omputer\\
+	\textbf{SMD} & \textbf{S}urface \textbf{M}ounted \textbf{D}evice\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
 	\textbf{VNC} & \textbf{V}irtual \textbf{N}etwork \textbf{C}omputing\\
 
