Fix feedback issues and start Design PCB section

--- a/paper/Appendices/AppendixB.tex
+++ b/paper/Appendices/AppendixB.tex
@@ -4,9 +4,10 @@
 
 \begin{longtable}{|>{\raggedright\arraybackslash}p{0.2\linewidth}|c|l|l|}%
   \hline
-  \label{tab:BillOfMaterials}
   \bfseries Reference \newline Designator& \bfseries Count & \bfseries Manufacturer's Number &\bfseries Value % Columns
   \csvreader[respect percent=true, respect underscore=true, respect sharp=true, table head=\toprule, table foot=\bottomrule]{Figures/kicad/lathrum_thesis_bom.csv}{}% Data
   {\\\hline\csvcoli&\csvcolii&\csvcolv&\csvcoliii}% Rows
   \\\hline
+  \caption[Bill of Materials]{Bill of Materials for a single PCB Board.}
+  \label{tab:BillOfMaterials}
 \end{longtable}
