--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -204,3 +204,11 @@
   journal   = {Proto Advantage},
   publisher = {Proto Advantage}
 }
+
+@misc{picockpit_2021,
+  title   = {Everything about raspberry pi zero 2 W},
+  url     = {https://picockpit.com/raspberry-pi/everything-about-raspberry-pi-zero-2-w/},
+  journal = {PiCockpit},
+  year    = {2021},
+  month   = {Oct}
+}
