--- a/paper/main.tex
+++ b/paper/main.tex
@@ -46,6 +46,7 @@ headsepline, % Uncomment to get a line under the header
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
 \usepackage{wrapfig} % Required to wrap figures
+\usepackage{subcaption} % Required for subfigures
 
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny,obeyFinal]{todonotes} % Todo notes in margin
 
@@ -215,12 +216,13 @@ headsepline, % Uncomment to get a line under the header
 	\textbf{CM4} & Raspberry Pi \textbf{C}ompute \textbf{M}odule \textbf{4}\\
 	\textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{CRD} & \textbf{C}hrome \textbf{R}emote \textbf{D}esktop\\
+	\textbf{FFC} & \textbf{F}lat \textbf{F}lexible \textbf{C}able\\
 	\textbf{GPU} & \textbf{G}raphics \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{IDE} & \textbf{I}ntegrated \textbf{D}evelopment \textbf{E}nvironment\\
 	\textbf{PC} & \textbf{P}ersonal \textbf{C}omputer\\
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
-	\textbf{SBC} & \textbf{S}ingle \textbf{B}aard \textbf{C}omputer\\
+	\textbf{SBC} & \textbf{S}ingle \textbf{B}oard \textbf{C}omputer\\
 	\textbf{SMD} & \textbf{S}urface \textbf{M}ounted \textbf{D}evice\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
 	\textbf{VNC} & \textbf{V}irtual \textbf{N}etwork \textbf{C}omputing\\
