(almost) finish draft of hardware section
Still need to investigate the USB issues and maybe add more detail to the end of the chapter, but other than that I have a couple of questions to resolve then I'm happyish with the chapter

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -212,3 +212,19 @@
   year    = {2021},
   month   = {Oct}
 }
+
+@misc{dsi_vs_hdmi,
+  title   = {HDMI vs DSI, Pros and Cons?},
+  url     = {https://raspberrypi.stackexchange.com/questions/88075/hdmi-vs-dsi-pros-and-cons},
+  journal = {Raspberry Pi Stack Exchange},
+  year    = {2018},
+  month   = {Aug}
+}
+
+@misc{rtc_kernelpatch,
+  title   = {How to make the PCF85063AT work with CM4?},
+  url     = {https://forums.raspberrypi.com/viewtopic.php?t=293632},
+  journal = {Raspberry Pi Forums},
+  year    = {2020},
+  month   = {Dec}
+}
