--- a/paper/main.tex
+++ b/paper/main.tex
@@ -231,6 +231,7 @@ In the case where someone already owns a desktop computer and must be mobile, in
 	\textbf{PC} & \textbf{P}ersonal \textbf{C}omputer\\
 	\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard\\
 	\textbf{RDP} & \textbf{R}emote \textbf{D}esktop \textbf{P}rotocol\\
+	\textbf{RTC} & \textbf{R}eal \textbf{T}ime \textbf{C}lock\\
 	\textbf{SBC} & \textbf{S}ingle \textbf{B}oard \textbf{C}omputer\\
 	\textbf{SMD} & \textbf{S}urface \textbf{M}ounted \textbf{D}evice\\
 	\textbf{SSH} & \textbf{S}ecure \textbf{Sh}ell (Protocol)\\
