Start the software section

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -228,3 +228,9 @@
   year    = {2020},
   month   = {Dec}
 }
+
+@misc{gamestream_userguide,
+  title   = {How GameStream Works},
+  url     = {https://www.nvidia.com/en-us/support/gamestream/how-gamestream-works/},
+  journal = {GameStream User Guide}
+}
