--- a/paper/main.tex
+++ b/paper/main.tex
@@ -58,6 +58,8 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{csvsimple} % Import CSV files for use in tables
 \usepackage{longtable} % Tables that span multiple pages
 
+\usepackage{listings} % Required for the code examples
+
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
