Fixes from feedback, add images of physical board

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -198,6 +198,12 @@
   author  = {Raspberry Pi}
 }
 
+@misc{rpi_cm4_docs,
+  title   = {Raspberry pi documentation},
+  url     = {https://www.raspberrypi.com/documentation/computers/compute-module.html},
+  journal = {Compute Module Hardware}
+} 
+
 @misc{smt_adapter,
   title     = {QFN-100 to DIP-104 SMT Adapter},
   url       = {http://www.proto-advantage.com/store/product_info.php?products_id=3100128},
@@ -229,8 +235,32 @@
   month   = {Dec}
 }
 
+@misc{cm4_datasheet_problem,
+  title   = {AnalogIP0 AnalogIP1 pins on CM4},
+  url     = {https://forums.raspberrypi.com/viewtopic.php?t=289344#p1748915},
+  journal = {Raspberry Pi Forums}
+} 
+
 @misc{gamestream_userguide,
   title   = {How GameStream Works},
   url     = {https://www.nvidia.com/en-us/support/gamestream/how-gamestream-works/},
   journal = {GameStream User Guide}
+}
+
+@misc{jlcpcb,
+  title   = {PCB prototype \& PCB fabrication manufacturer},
+  url     = {https://jlcpcb.com/},
+  journal = {JLCPCB}
+}
+
+@misc{digikey,
+  title   = {DigiKey Electronics Home},
+  url     = {https://www.digikey.com/},
+  journal = {DigiKey}
+}
+
+@misc{mouser,
+  title   = {Mouser Electronics - electronic components distributor},
+  url     = {https://www.mouser.com/},
+  journal = {Electronic Components Distributor - Mouser Electronics}
 }
