--- a/paper/main.tex
+++ b/paper/main.tex
@@ -224,6 +224,7 @@ In the case where someone already owns a desktop computer and must be mobile, in
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 	\addchaptertocentry{\abbrevname} % Add the Abbreviations to the table of contents
+	\textbf{BOM} & \textbf{B}ill \textbf{O}f \textbf{M}aterials\\
 	\textbf{CM4} & Raspberry Pi \textbf{C}ompute \textbf{M}odule \textbf{4}\\
 	\textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit\\
 	\textbf{CRD} & \textbf{C}hrome \textbf{R}emote \textbf{D}esktop\\
