Start developing for ARM section

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -264,3 +264,9 @@
   url     = {https://www.mouser.com/},
   journal = {Electronic Components Distributor - Mouser Electronics}
 }
+
+@misc{manjaro_arm_tools,
+  title   = {manjaro-arm-tools},
+  url     = {https://gitlab.manjaro.org/manjaro-arm/applications/manjaro-arm-tools/-/tree/master/},
+  journal = {GitLab}
+}
