Start Evaluation section, add graphs

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -124,6 +124,11 @@ headsepline, % Uncomment to get a line under the header
 }
 \lstset{escapechar=@,style=customc}
 
+
+\usepackage{pgfplots} % Required for the plots
+\usepgfplotslibrary{statistics}
+\pgfplotsset{compat=1.8}
+
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
