Finish draft of evaluation chapter

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -270,3 +270,22 @@
   url     = {https://gitlab.manjaro.org/manjaro-arm/applications/manjaro-arm-tools/-/tree/master/},
   journal = {GitLab}
 }
+
+@misc{rdp_bandwidth,
+  title   = {Remote Desktop Protocol Bandwidth Requirements},
+  url     = {https://docs.microsoft.com/en-us/azure/virtual-desktop/rdp-bandwidth},
+  journal = {Remote Desktop Protocol bandwidth requirements Azure Virtual Desktop - Azure | Microsoft Docs},
+  author  = {Gundarev},
+  year    = {2021},
+  month   = {Oct}
+}
+
+@inbook{google_io_vp9,
+  place     = {San Francisco},
+  title     = {WebM and the New VP9 Open Video Codec},
+  url       = {https://www.youtube.com/watch?v=K6JshvblIcM},
+  booktitle = {Google I/O 2013},
+  author    = {Bultje, Ronald},
+  year      = {2013},
+  month     = {May}
+} 
