--- a/paper/main.tex
+++ b/paper/main.tex
@@ -122,6 +122,14 @@ headsepline, % Uncomment to get a line under the header
   % identifierstyle=\color{blue},
   stringstyle=\color{orange},
 }
+\lstdefinestyle{plaintext}{
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  frame=single,
+	numbers=none,
+  showstringspaces=false,
+  basicstyle=\footnotesize\ttfamily,
+}
 \lstset{escapechar=@,style=customc}
 
 
