--- a/paper/main.tex
+++ b/paper/main.tex
@@ -23,7 +23,7 @@
 english, % ngerman for German
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
 % draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
-% final, % Uncomment to enable final mode (hide todos)
+final, % Uncomment to enable final mode (hide todos)
 %nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 %liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
 %toctotoc, % Uncomment to add the main table of contents to the table of contents
@@ -282,7 +282,9 @@ In the case where someone already owns a desktop computer and must be mobile, in
 
 \begin{acknowledgements}
 	\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-	The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+	I would like to express my graditude to my thesis director, Dr. Robert Heinrichs, and to each of my committee members, Professor Ruben Acu\~{n}a and Dr. Shawn Jordan, for their help in the development of this thesis.
+	Without their guidance, I would not have been able to step so far outside of my comfort zone and learn about so many new topics to make this thesis happen.
+	I would also like to thank my friends and family who were always there to bounce ideas off of and inevitably tell me when I was trying to fit too many words into a single section.
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -354,7 +356,7 @@ In the case where someone already owns a desktop computer and must be mobile, in
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{For/Dedicated to/To my\ldots}
+\dedicatory{For my parents, and their endless support, encouragement, and guidance.}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
