--- a/paper/main.tex
+++ b/paper/main.tex
@@ -23,7 +23,7 @@
 english, % ngerman for German
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
 % draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
-final, % Uncomment to enable final mode (hide todos)
+% final, % Uncomment to enable final mode (hide todos)
 %nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 %liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
 %toctotoc, % Uncomment to add the main table of contents to the table of contents
@@ -241,10 +241,10 @@ headsepline, % Uncomment to get a line under the header
 		\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
 	\end{itemize}
 
-	\noindent Signed:\\
+	\noindent Signed: Dylan Lathrum\\
 	\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
 
-	\noindent Date:\\
+	\noindent Date: 4/15/2022\\
 	\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
 \end{declaration}
 
