Updates based on committee feedback

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -288,4 +288,28 @@
   author    = {Bultje, Ronald},
   year      = {2013},
   month     = {May}
-} 
+}
+
+@misc{time.is,
+  url     = {https://time.is/},
+  journal = {Time.is}
+}
+
+@manual{MCP73871-2CCI/ML-ND_datasheet,
+  organization = {Microchip Technology},
+  title        = {Dual Low Dropout Voltage Regulator},
+  number       = {MCP73871-2CCI/ML-ND},
+  year         = 2019,
+  month        = 4,
+  note         = {Rev. E},
+  url          = {https://ww1.microchip.com/downloads/en/DeviceDoc/MCP73871-Data-Sheet-20002090E.pdf}
+}
+
+@misc{ProjectGitHub,
+  author       = {Lathrum, Dylan},
+  title        = {ASU Barrett Undergraduate Thesis},
+  year         = {2022},
+  publisher    = {GitHub},
+  journal      = {GitHub repository},
+  howpublished = {\url{https://github.com/Dylancyclone/thesis}}
+}
