--- a/paper/main.tex
+++ b/paper/main.tex
@@ -369,7 +369,6 @@ In the case where someone already owns a desktop computer and must be mobile, in
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-% \include{Chapters/Example}
 \include{Chapters/Introduction}
 \include{Chapters/Background}
 \include{Chapters/StateOfTheArt}
@@ -389,7 +388,7 @@ In the case where someone already owns a desktop computer and must be mobile, in
 
 \include{Appendices/AppendixA}
 \include{Appendices/AppendixB}
-%\include{Appendices/AppendixC}
+\include{Appendices/AppendixC}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
